# dispatch-factory

./: .dispatch-factory.example.toml  .gitignore  BACKLOG.md  CLAUDE.md  CONTRIBUTING.md  DISPATCH_EVALUATION.md  DISPATCH_OPS_REPORT.md  DISPATCH_REPORT.md  INVESTIGATION-mass-abandonment.md  LICENSE  Makefile  README.md  VERIFICATION_REPORT.md  tmp9js3z7de.json
.scratch/: blog-post.md  x-post.md
backend/: archived_projects.py  artifacts.py  auto_merge.py  backlog.py  circuit_breaker.py  cleared_healed_sessions.py  config.py  db.py  empty_backlog_detector.py  factory_idle_mode.py  factory_operator.py  foreman.py  healer_circuit_breaker.py  heartbeat.py  intake-prompt.md  intake.py  main.py  meta_work_ratio.py  migrate_priorities.py  paused_projects.py  pipeline.py  pipeline_runner.py  post_heal_verify.py  project_health.py  pyproject.toml  review_policy.py  reviewer_calibration.py  self_improvement.py  terminal.py  test_alert_lifecycle.py  test_meta_work_ratio.py
backend/foreman-prompts/: cleanup.md  direction.md  quality.md  strategy.md  triage.md
backend/operator-prompts/: cleanup.md  quality.md  strategy.md  triage.md
backend/tests/: test_artifact_prefix.py  test_auto_dispatch_verify_guard.py  test_dispatch_race.py  test_factory_idle_mode.py  test_healer_circuit_breaker.py  test_heartbeat_startup.py  test_post_heal_verify.py  test_worker_done_escalation.py
docs/post-mortems/: electricapp-healer-feedback-loop.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/lib/: api.ts  (+3 more)
(+11 files in other folders)
