[project]
name = "dispatch-factory"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "watchfiles>=1.0",
    "tomli>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.8"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff.lint]
select = ["F", "E9"]
